--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run a sample github action
-      - run: echo "This workflow run successfully for this particular action"
+        run: echo "This workflow run successfully for this particular action"
 
 
 
